# ssh-mountmate

./: .gitignore  CONTRIBUTING.md  README.md  install-windows-deps.ps1  install.ps1  install.sh  launcher.py  pyproject.toml  rsshmount-gui.cmd  rsshmount.cmd  rsshmount.py  rsshmount_gui.pyw  启动 SSH MountMate.cmd
.github/workflows/: build-windows.yml  build.yml  python-port-release.yml  release-notes.yml  release.yml
app/: rsshmount_gui.pyw
python_port/: README.md
python_port/src/ssh_mountmate/: core.py  gui.py  rclone.py  ssh_config_live.py
release-notes/: v0.1.1.md  v0.1.2.md  v0.1.3.md  v0.1.4-rc.1.md  v0.1.4.md  v0.1.5.md  v0.1.6-rc.1.md  v0.1.6.md  v0.1.7-rc.1.md  v0.1.7.md
scripts/: build-windows-exe.ps1  package-linux-amd64.sh  package-windows-amd64.sh
src/ssh_mountmate/: __init__.py  core.py  gui.py  notices.py  paths.py  platforms.py  rclone.py  updates.py
