[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ssh-mountmate"
version = "0.1.0"
description = "Cross-platform GUI for mounting SSH/SFTP servers with rclone"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
build = ["pyinstaller>=6"]

[project.scripts]
ssh-mountmate = "ssh_mountmate.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
