[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ssh-mountmate"
version = "0.1.7rc1"
description = "Cross-platform GUI for mounting SSH/SFTP servers with rclone"
requires-python = ">=3.10"
dependencies = []
license = { file = "LICENSE" }

[project.optional-dependencies]
build = ["pyinstaller>=6", "fonttools>=4.50"]

[project.scripts]
ssh-mountmate = "ssh_mountmate.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
